--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
 body {
 	background-color: lightblue;
 }
+
+h1 {
+	color: #1C6EA4;
+}
+
+h2 {
+	text-shadow: 1px 2px 2px #1C6EA4;
+	font-style: italic;
+	font-variant: small-caps;
+}
+
+img {
+	align-content: center;
+	border-radius: 10%;
+	width: 500px;
+	height: 500px;
+}
+
+td {
+	text-align: center;
+	vertical-align: middle;
+}
+
+table {
+	width: 100%;
+	table-layout: auto;
+}
